--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
                                     >
                                         Mateusz Charytoniuk
                                     </h3>
-                                    <h4 class="profile-subtitle">
-                                        Posted on Nov 15
-                                    </h4>
+                                    <h4 class="profile-subtitle">Nov 15</h4>
                                 </div>
                             </div>
                         </aside>
@@ -216,6 +214,7 @@
                                     <p>🤩</p>
                                     <p>🙌</p>
                                     <p>🔥</p>
+
                                     <p class="emojiText">286</p>
                                     <p
                                         class="emojiText showOnTabletOnly"
@@ -238,6 +237,288 @@
                                 </div>
                                 <div class="bookmarkSection">
                                     4 min read
+                                    <img
+                                        src="assets/bookmark.png"
+                                        alt="bookmark icon"
+                                        width="15px"
+                                        height="15px"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="juniorDevSectionPadding">
+                        <aside>
+                            <div class="profileInfo">
+                                <img
+                                    src="/assets/333862a1-0a15-479e-b0be-8e7da338b948.webp"
+                                    class="profileImage"
+                                    alt="profile picture of a guy smiling"
+                                />
+                                <div class="column">
+                                    <h3
+                                        style="
+                                            font-size: 16px;
+                                            color: rgb(64, 64, 64);
+                                        "
+                                    >
+                                        Rasaf Ibrahim
+                                    </h3>
+                                    <h4 class="profile-subtitle">Nov 18</h4>
+                                </div>
+                            </div>
+                        </aside>
+                        <div class="paddingOnDesktop">
+                            <h1 class="mainTitle">
+                                A guide to React Custom Hooks
+                            </h1>
+                            <aside class="tagSection">
+                                <p class="tags">#react</p>
+                                <p class="tags">#hook</p>
+                                <p class="tags">#javascript</p>
+                                <p class="tags">#webdev</p>
+                            </aside>
+
+                            <div class="emoji-section">
+                                <div class="setOfEmojis">
+                                    <p>💖</p>
+                                    <p>🦄</p>
+                                    <p>🤩</p>
+                                    <p>🙌</p>
+                                    <p>🔥</p>
+                                    <p class="emojiText">26</p>
+                                    <p
+                                        class="emojiText showOnTabletOnly"
+                                        style="margin-left: 5px"
+                                    >
+                                        reactions
+                                    </p>
+                                    <p
+                                        class="emojiText"
+                                        style="margin-left: 10px"
+                                    >
+                                        💬 2
+                                    </p>
+                                    <p
+                                        class="emojiText showOnTabletOnly"
+                                        style="margin-left: 10px"
+                                    >
+                                        comments
+                                    </p>
+                                </div>
+                                <div class="bookmarkSection">
+                                    3 min read
+                                    <img
+                                        src="assets/bookmark.png"
+                                        alt="bookmark icon"
+                                        width="15px"
+                                        height="15px"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="juniorDevSectionPadding">
+                        <aside>
+                            <div class="profileInfo">
+                                <img
+                                    src="/assets/9e63c9bc-4d9d-4638-b411-d0ec95dbb351.webp"
+                                    class="profileImage"
+                                    alt="profile picture of a guy smiling"
+                                />
+                                <div class="column">
+                                    <h3
+                                        style="
+                                            font-size: 16px;
+                                            color: rgb(64, 64, 64);
+                                        "
+                                    >
+                                        Scofield Idehen
+                                    </h3>
+                                    <h4 class="profile-subtitle">Nov 19</h4>
+                                </div>
+                            </div>
+                        </aside>
+                        <div class="paddingOnDesktop">
+                            <h1 class="mainTitle">
+                                Sam Altman: Corporate Collateral Damage?
+                            </h1>
+                            <aside class="tagSection">
+                                <p class="tags">#discuss</p>
+                                <p class="tags">#ai</p>
+                                <p class="tags">#openai</p>
+                                <p class="tags">#deeplearning</p>
+                            </aside>
+
+                            <div class="emoji-section">
+                                <div class="setOfEmojis">
+                                    <p>💖</p>
+                                    <p>🦄</p>
+                                    <p>🤩</p>
+                                    <p>🙌</p>
+                                    <p>🔥</p>
+                                    <p class="emojiText">5</p>
+                                    <p
+                                        class="emojiText showOnTabletOnly"
+                                        style="margin-left: 5px"
+                                    >
+                                        reactions
+                                    </p>
+                                    <p
+                                        class="emojiText"
+                                        style="margin-left: 10px"
+                                    >
+                                        💬
+                                    </p>
+                                    <p
+                                        class="emojiText showOnTabletOnly"
+                                        style="margin-left: 10px"
+                                    ></p>
+                                </div>
+                                <div class="bookmarkSection">
+                                    3 min read
+                                    <img
+                                        src="assets/bookmark.png"
+                                        alt="bookmark icon"
+                                        width="15px"
+                                        height="15px"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="juniorDevSectionPadding">
+                        <aside>
+                            <div class="profileInfo">
+                                <img
+                                    src="/assets/eca2026d-899d-42d6-b7a5-7eea107afbab.webp"
+                                    class="profileImage"
+                                    alt="profile picture of a guy smiling"
+                                />
+                                <div class="column">
+                                    <h3
+                                        style="
+                                            font-size: 16px;
+                                            color: rgb(64, 64, 64);
+                                        "
+                                    >
+                                        William V. Joaquim
+                                    </h3>
+                                    <h4 class="profile-subtitle">Nov 18</h4>
+                                </div>
+                            </div>
+                        </aside>
+                        <div class="paddingOnDesktop">
+                            <h1 class="mainTitle">
+                                Usando migrations com Golang
+                            </h1>
+                            <aside class="tagSection">
+                                <p class="tags">#go</p>
+                                <p class="tags">#braziliandevs</p>
+                                <p class="tags">#sql</p>
+                                <p class="tags">#beginners</p>
+                            </aside>
+
+                            <div class="emoji-section">
+                                <div class="setOfEmojis">
+                                    <p>💖</p>
+                                    <p>🦄</p>
+                                    <p>🤩</p>
+                                    <p>🙌</p>
+                                    <p>🔥</p>
+                                    <p class="emojiText">7</p>
+                                    <p
+                                        class="emojiText showOnTabletOnly"
+                                        style="margin-left: 5px"
+                                    >
+                                        reactions
+                                    </p>
+                                    <p
+                                        class="emojiText"
+                                        style="margin-left: 10px"
+                                    >
+                                        💬
+                                    </p>
+                                    <p
+                                        class="emojiText showOnTabletOnly"
+                                        style="margin-left: 10px"
+                                    ></p>
+                                </div>
+                                <div class="bookmarkSection">
+                                    5 min read
+                                    <img
+                                        src="assets/bookmark.png"
+                                        alt="bookmark icon"
+                                        width="15px"
+                                        height="15px"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="juniorDevSectionPadding">
+                        <aside>
+                            <div class="profileInfo">
+                                <img
+                                    src="/assets/f0514090-260b-4a34-89b0-a2b6e922d5ec.webp"
+                                    class="profileImage"
+                                    alt="profile picture of a guy smiling"
+                                />
+                                <div class="column">
+                                    <h3
+                                        style="
+                                            font-size: 16px;
+                                            color: rgb(64, 64, 64);
+                                        "
+                                    >
+                                        GrahamTheDev
+                                    </h3>
+                                    <h4 class="profile-subtitle">Nov 20</h4>
+                                </div>
+                            </div>
+                        </aside>
+                        <div class="paddingOnDesktop">
+                            <h1 class="mainTitle">
+                                Bootcamps don't teach you this...
+                            </h1>
+                            <aside class="tagSection">
+                                <p class="tags">#a11y</p>
+                                <p class="tags">#webdev</p>
+                                <p class="tags">#programming</p>
+                                <p class="tags">#beginners</p>
+                            </aside>
+
+                            <div class="emoji-section">
+                                <div class="setOfEmojis">
+                                    <p>💖</p>
+                                    <p>🦄</p>
+                                    <p>🤩</p>
+                                    <p>🙌</p>
+                                    <p>🔥</p>
+                                    <p class="emojiText">13</p>
+                                    <p
+                                        class="emojiText showOnTabletOnly"
+                                        style="margin-left: 5px"
+                                    >
+                                        reactions
+                                    </p>
+                                    <p
+                                        class="emojiText"
+                                        style="margin-left: 10px"
+                                    >
+                                        💬
+                                    </p>
+                                    <p
+                                        class="emojiText showOnTabletOnly"
+                                        style="margin-left: 10px"
+                                    ></p>
+                                </div>
+                                <div class="bookmarkSection">
+                                    5 min read
                                     <img
                                         src="assets/bookmark.png"
                                         alt="bookmark icon"
